-- Alfredo 0.1.1 release

- Fixing/Updating javadocs
- Add version number var to doc pages
- Reorganizing docs layout for multiple releases
- Normalizing configuration property names
- Add equals/hashcode methods to AuthenticatedURL.Token
- GSSManager instance is obtained at init time instead on every authentication request
- Add AuthenticatedURL.Token constructor that takes a string representation of a token
- Improved documentation

-- Alfredo 0.1.0 release

- First release