@@ -25,7 +25,7 @@
 
     <servlet-mapping>
         <servlet-name>whoServlet</servlet-name>
-        <url-pattern>/annonymous/who</url-pattern>
+        <url-pattern>/anonymous/who</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
@@ -44,14 +44,14 @@
     </filter>
 
     <filter>
-        <filter-name>annonymousFilter</filter-name>
+        <filter-name>anonymousFilter</filter-name>
         <filter-class>com.cloudera.alfredo.server.AuthenticationFilter</filter-class>
         <init-param>
             <param-name>type</param-name>
             <param-value>simple</param-value>
         </init-param>
         <init-param>
-            <param-name>simple.annonymous.allowed</param-name>
+            <param-name>simple.anonymous.allowed</param-name>
             <param-value>true</param-value>
         </init-param>
         <init-param>
@@ -68,7 +68,7 @@
             <param-value>simple</param-value>
         </init-param>
         <init-param>
-            <param-name>simple.annonymous.allowed</param-name>
+            <param-name>simple.anonymous.allowed</param-name>
             <param-value>false</param-value>
         </init-param>
         <init-param>
@@ -104,8 +104,8 @@
     </filter-mapping>
 
     <filter-mapping>
-        <filter-name>annonymousFilter</filter-name>
-        <url-pattern>/annonymous/*</url-pattern>
+        <filter-name>anonymousFilter</filter-name>
+        <url-pattern>/anonymous/*</url-pattern>
     </filter-mapping>
 
     <filter-mapping>
