@@ -17,6 +17,6 @@
 -->
 <html>
     <body>
-        <h1>Hello Alfredo Pseudo/Simple Authentication with annonymous users!</h1>
+        <h1>Hello Alfredo Pseudo/Simple Authentication with anonymous users!</h1>
     </body>
 </html>
